--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .background {
     position: fixed;
     top: 0;
@@ -12,4 +16,12 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+}
+
+.container {
+    width: 720px;
+    background-color: white;
+    padding: 30px;
+    margin: 6rem auto;
+    border-radius: 12px;
 }
