--- a/src/style.css
+++ b/src/style.css
@@ -19,9 +19,36 @@ body {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
     width: 720px;
-    background-color: white;
+    background-color: whitesmoke;
     padding: 30px;
     margin: 6rem auto;
     border-radius: 12px;
+}
+
+.container h1 {
+    padding: 1rem;
+}
+
+.container section {
+    width: 80%;
+    padding: 1rem;
+    border: 1px solid #bbb;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.container section header {
+    margin-bottom: 1rem;
+    font-weight: bold;
+    font-size: 1.35rem;
+
+}
+
+ul {
+    list-style: none;
 }
