--- a/src/style.css
+++ b/src/style.css
@@ -52,3 +52,19 @@ body {
 ul {
     list-style: none;
 }
+
+ul li {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+ul li p:first-of-type {
+    width: 80px;
+    text-align: right;
+}
+
+ul li p:nth-of-type(2) {
+    width: 120px;
+    text-align: left;
+}
