--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,47 @@ body {
     overflow: hidden;
 }
 
+/* Nav bar */
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .logo {
+    transform: scale(2);
+    padding: 24px;
+    margin-left: 16px;
+}
+
+.links {
+    list-style: none;
+    display: flex;
+    gap: 16px;
+    margin-right: 32px;
+}
+
+.links a {
+    display: inline-block;
+    color: black;
+    padding: 24px;
+    text-decoration: none;
+}
+
+.links a:hover {
+    background-color: #aaa;
+    color: white;
+    font-weight: bold;
+}
+
+/* Content */
+
 .container {
     display: flex;
     flex-direction: column;
@@ -26,7 +67,7 @@ body {
     width: 720px;
     background-color: whitesmoke;
     padding: 30px;
-    margin: 6rem auto;
+    margin: 8rem auto;
     border-radius: 12px;
 }
 
@@ -36,7 +77,7 @@ body {
 
 .container section {
     width: 80%;
-    padding: 1rem;
+    padding: 32px 16px;
     border: 1px solid #bbb;
     border-radius: 8px;
     text-align: center;
@@ -60,8 +101,10 @@ ul li {
 }
 
 ul li p:first-of-type {
-    width: 80px;
+    width: 100px;
     text-align: right;
+    font-weight: bold;
+    margin-bottom: 3px;
 }
 
 ul li p:nth-of-type(2) {
